--- a/clusters/demo/kbot-hr.yml
+++ b/clusters/demo/kbot-hr.yml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: ./helm
-      reconcileStrategy: ChartVersion
+      reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
         name: kbot
