--- a/clusters/demo/flux-kustomization.yml
+++ b/clusters/demo/flux-kustomization.yml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m
-  path: ./clusters/demo
+  path: ./
   prune: true
   sourceRef:
     kind: GitRepository
