--- a/clusters/demo/flux-kustomization.yml
+++ b/clusters/demo/flux-kustomization.yml
@@ -1,16 +1,16 @@
-# flux/clusters/production/my-app.yaml
-apiVersion: kustomize.toolkit.fluxcd.io/v1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: kbot
   namespace: flux-system
 spec:
   interval: 5m
-  path: ./
+  path: ./clusters/demo
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
   decryption:
     provider: sops
-  wait: true
+    secretRef:
+      name: sops-age
