--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,9 @@ jobs:
       - name: ☁️ Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
           credentials_json: ${{ secrets.GCP_SA_KEY }}
-          # export_default_credentials: true
+          # service_account: 
 
       - name: Install dependencies
         run: |
