--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
           API_VERSION=$(gcloud secrets versions access latest --secret=API_VERSION)
           mkdir -p tmp clusters/demo
           kubectl create secret generic kbot \
+            --namespace=demo \
             --from-literal=token=$TELE_TOKEN \
             --from-literal=api_version=$API_VERSION \
             --dry-run=client -o yaml > tmp/new_secret.yml
