--- a/clusters/demo/otel-hr.yaml
+++ b/clusters/demo/otel-hr.yaml
@@ -14,3 +14,8 @@ spec:
         name: opentelemetry
         namespace: demo
       interval: 1m
+  values:
+    admissionWebhooks:
+      enabled: false
+    certManager:
+      enabled: false
