--- a/clusters/demo/fluentbit-hr.yaml
+++ b/clusters/demo/fluentbit-hr.yaml
@@ -14,3 +14,45 @@ spec:
         name: fluent
         namespace: demo
       interval: 1m
+  values:
+    config:
+      service: |
+        [SERVICE]
+            flush 1
+            log_level error
+
+      inputs: |
+        [INPUT]
+            Name              tail
+            Path              /var/log/containers/*.log
+            Parser            docker
+            Refresh_Interval  30
+            Ignore_Older      6h
+            Tag               kube.*
+            Mem_Buf_Limit     5MB
+            Skip_Long_Lines   On
+
+      filters: |
+        [FILTER]
+            Name                kubernetes
+            Match               kube.*
+            Kube_URL           https://kubernetes.default.svc:443
+            Kube_CA_Path       /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+            Kube_Token_Path    /var/run/secrets/kubernetes.io/serviceaccount/token
+            Merge_Log          On
+            Merge_Log_Key      log_processed
+            K8S-Logging.Parser On
+            K8S-Logging.Exclude On
+
+      outputs: |
+        [OUTPUT]
+            Name                 opentelemetry
+            Match                kube.*
+            Host                 collector.demo.svc.cluster.local
+            Port                 3030
+            metrics_uri          /v1/metrics
+            logs_uri             /v1/logs
+            traces_uri           /v1/traces
+            Log_response_payload True
+            tls                  off
+            tls.verify           off
