--- a/clusters/demo/otel/fluent-bit-hr.yml
+++ b/clusters/demo/otel/fluent-bit-hr.yml
@@ -14,6 +14,31 @@ spec:
         name: fluent-bit
         namespace: demo
   values:
+    serviceAccount:
+      create: true
+      name: fluent-bit
+
+    daemonSet:
+      enabled: true
+
+    inputs: |
+      [INPUT]
+          Name              tail
+          Tag               kube.*
+          Path              /var/log/containers/*.log
+          Parser            docker
+          DB                /var/log/flb_kube.db
+          Mem_Buf_Limit     50MB
+          Skip_Long_Lines   On
+          Refresh_Interval  10
+
+    customParsers: |
+      [PARSER]
+          Name   docker
+          Format json
+          Time_Key time
+          Time_Format %Y-%m-%dT%H:%M:%S.%L
+
     outputs: |
       [OUTPUT]
           Name opentelemetry
@@ -21,3 +46,13 @@ spec:
           Host collector.demo.svc.cluster.local
           Port 4317
           Mode grpc
+          add_label app fluent-bit
+          add_label color blue
+    filters: |
+      [FILTER]
+          Name kubernetes
+          Match kube.*
+          Merge_Log On
+          Keep_Log Off
+          K8S-Logging.Parser On
+          K8S-Logging.Exclude On
