--- a/clusters/demo/otel/otel-collector-hr.yml
+++ b/clusters/demo/otel/otel-collector-hr.yml
@@ -16,3 +16,33 @@ spec:
   values:
     mode: deployment
     fullnameOverride: collector
+    image:
+      repository: otel/opentelemetry-collector-contrib
+      tag: 0.128.0
+    config:
+      receivers:
+        otlp:
+          protocols:
+            grpc: {}
+            http:
+              endpoint: "0.0.0.0:3030"
+
+      exporters:
+        debug:
+          verbosity: normal
+        loki:
+          endpoint: http://loki:3100/loki/api/v1/push
+        prometheus:
+          endpoint: "0.0.0.0:8889"
+
+      service:
+        pipelines:
+          logs:
+            receivers: [otlp]
+            exporters: [loki]
+          traces:
+            receivers: [otlp]
+            exporters: [debug]
+          metrics:
+            receivers: [otlp]
+            exporters: [debug, prometheus]
