added gfafana sources

--- a/clusters/demo/otel/grafana-hr.yml
+++ b/clusters/demo/otel/grafana-hr.yml
@@ -14,3 +14,16 @@ spec:
         namespace: demo
   values:
     adminPassword: admin
+    datasources:
+      datasources.yaml:
+        apiVersion: 1
+        datasources:
+          - name: Prometheus
+            type: prometheus
+            url: http://prometheus-server.demo.svc.cluster.local
+            access: proxy
+            isDefault: true
+          - name: Loki
+            type: loki
+            url: http://loki.demo.svc.cluster.local:3100
+            access: proxy
