--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -8,9 +8,69 @@ spec:
   chart:
     spec:
       chart: loki
+      version: 6.30.1
       sourceRef:
         kind: HelmRepository
         name: grafana
         namespace: demo
   values:
     fullnameOverride: loki
+
+    loki:
+      isDefaultConfig: false
+      config: |
+        auth_enabled: false
+
+        server:
+          http_listen_port: 3100
+          grpc_listen_port: 9096
+
+        common:
+          instance_addr: 0.0.0.0
+          path_prefix: /var/loki
+          replication_factor: 1
+          ring:
+            kvstore:
+              store: inmemory
+          storage:
+            filesystem:
+              chunks_directory: /var/loki/chunks
+              rules_directory: /var/loki/rules
+
+        query_range:
+          results_cache:
+            cache:
+              embedded_cache:
+                enabled: true
+                max_size_mb: 100
+
+        schema_config:
+          configs:
+            - from: "2020-10-24"
+              store: boltdb-shipper
+              object_store: filesystem
+              schema: v11
+              index:
+                prefix: index_
+                period: 24h
+
+        storage_config:
+          boltdb_shipper:
+            active_index_directory: /var/loki/index
+            shared_store: filesystem
+            cache_location: /var/loki/cache
+          filesystem:
+            directory: /var/loki/chunks
+
+        ruler:
+          alertmanager_url: http://prometheus-alertmanager.demo.svc.cluster.local:9093
+
+        analytics:
+          reporting_enabled: false
+
+    persistence:
+      enabled: true
+      accessModes:
+        - ReadWriteOnce
+      size: 10Gi
+      storageClassName: standard
