--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -17,50 +17,57 @@ spec:
     fullnameOverride: loki
 
     loki:
-      auth_enabled: false
-      isDefaultConfig: false
       schemaConfig:
-          configs:
-            - from: "2020-10-24"
-              store: boltdb-shipper
-              object_store: filesystem
-              schema: v11
-              index:
-                prefix: index_
-                period: 24h
-      commonConfig:
-        instance_addr: 0.0.0.0
-        path_prefix: /var/loki
-        replication_factor: 1
-        ring:
-          kvstore:
-            store: inmemory
-      server:
-        http_listen_port: 3100
-        grpc_listen_port: 9096
-      query_range:
-        results_cache:
-          cache:
-            embedded_cache:
-              enabled: true
-              max_size_mb: 100
-      storage_config:
-        boltdb_shipper:
-          active_index_directory: /var/loki/index
-          shared_store: filesystem
-          cache_location: /var/loki/cache
-        filesystem:
-          directory: /var/loki/chunks
+        configs:
+          - from: 2024-04-01
+            store: tsdb
+            object_store: s3
+            schema: v13
+            index:
+              prefix: loki_index_
+              period: 24h
+      ingester:
+        chunk_encoding: snappy
+      tracing:
+        enabled: true
+      querier:
+        # Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
+        max_concurrent: 4
 
-      ruler:
-        alertmanager_url: http://prometheus-alertmanager.demo.svc.cluster.local:9093
 
-      analytics:
-        reporting_enabled: false
 
-    # persistence:
-    #   enabled: true
-    #   accessModes:
-    #     - ReadWriteOnce
-    #   size: 10Gi
-    #   storageClassName: standard
+    deploymentMode: SimpleScalable #SingleBinary for monolithic 
+
+    backend:
+      replicas: 3 
+    read:
+      replicas: 3
+    write:
+      replicas: 3
+
+    # Enable minio for storage
+    minio:
+      enabled: true
+
+    # Zero out replica counts of other deployment modes
+    singleBinary:
+      replicas: 0
+
+    ingester:
+      replicas: 0
+    querier:
+      replicas: 0
+    queryFrontend:
+      replicas: 0
+    queryScheduler:
+      replicas: 0
+    distributor:
+      replicas: 0
+    compactor:
+      replicas: 0
+    indexGateway:
+      replicas: 0
+    bloomCompactor:
+      replicas: 0
+    bloomGateway:
+      replicas: 0
