--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -16,43 +16,53 @@ spec:
   values:
     fullnameOverride: loki
 
+    deploymentMode: SimpleScalable
+
     loki:
       schemaConfig:
         configs:
           - from: 2024-04-01
-            store: tsdb
-            object_store: s3
-            schema: v13
+            store: boltdb-shipper
+            object_store: filesystem
+            schema: v11
             index:
               prefix: loki_index_
               period: 24h
+
+      storageConfig:
+        boltdb_shipper:
+          active_index_directory: /var/loki/index
+          cache_location: /var/loki/cache
+          shared_store: filesystem
+        filesystem:
+          directory: /var/loki/chunks
+
       ingester:
         chunk_encoding: snappy
+
       tracing:
         enabled: true
+
       querier:
-        # Default is 4, if you have enough memory and CPU you can increase, reduce if OOMing
         max_concurrent: 4
 
-
-
-    deploymentMode: SimpleScalable #SingleBinary for monolithic 
-
     backend:
-      replicas: 3 
+      replicas: 1
     read:
-      replicas: 3
+      replicas: 1
     write:
-      replicas: 3
+      replicas: 1
 
-    # Enable minio for storage
-    minio:
+    persistence:
       enabled: true
+      accessModes:
+        - ReadWriteOnce
+      size: 10Gi
+      storageClassName: standard  # Change if needed
 
-    # Zero out replica counts of other deployment modes
+    # Disable all other deployment modes
     singleBinary:
       replicas: 0
-
     ingester:
       replicas: 0
     querier:
