added gfafana sources/loki10

--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -28,6 +28,12 @@ spec:
         storageClassName: standard
 
     loki:
+      storage:
+        bucketNames:
+          chunks: loki-chunks
+          ruler: loki-ruler
+          admin: loki-admin
+
       schemaConfig:
         configs:
           - from: "2024-04-01"
