--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -28,6 +28,13 @@ spec:
         storageClassName: standard
 
     loki:
+      limits_config:
+        allow_structured_metadata: false
+      ruler:
+        alertmanager_url: http://prometheus-alertmanager.demo.svc.cluster.local:9093
+
+      analytics:
+        reporting_enabled: false
       storage:
         bucketNames:
           chunks: loki-chunks
