added gfafana sources/grafana1

--- a/clusters/demo/otel/grafana-hr.yml
+++ b/clusters/demo/otel/grafana-hr.yml
@@ -25,5 +25,5 @@ spec:
             isDefault: true
           - name: Loki
             type: loki
-            url: http://loki.demo.svc.cluster.local:3100
+            url: http://loki-gateway.demo.svc.cluster.local
             access: proxy
