--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -28,6 +28,7 @@ spec:
         storageClassName: standard
 
     loki:
+      auth_enabled: false
       limits_config:
         allow_structured_metadata: false
       ruler:
