--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -29,6 +29,16 @@ spec:
 
     loki:
       auth_enabled: false
+      server:
+        http_listen_port: 3100
+        grpc_listen_port: 9095
+
+      common:
+        instance_addr: 127.0.0.1
+        ring:
+          kvstore:
+            store: inmemory
+
       limits_config:
         allow_structured_metadata: false
       ruler:
