--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -16,73 +16,72 @@ spec:
   values:
     fullnameOverride: loki
 
+    loki:
+      auth_enabled: false
+
+      commonConfig:
+        replication_factor: 1
+
+      schemaConfig:
+        configs:
+          - from: "2024-04-01"
+            store: tsdb
+            object_store: filesystem
+            schema: v13
+            index:
+              prefix: loki_index_
+              period: 24h
+
+      storage_config:
+        filesystem:
+          directory: /var/loki
+
+      pattern_ingester:
+        enabled: true
+
+      limits_config:
+        allow_structured_metadata: true
+        volume_enabled: true
+
+      ruler:
+        enable_api: true
+
+    minio:
+      enabled: false
+
     deploymentMode: SingleBinary
 
     singleBinary:
       replicas: 1
       persistence:
         enabled: true
+        storageClass: standard
         accessModes:
           - ReadWriteOnce
         size: 10Gi
-        storageClassName: standard
+        mountPath: /var/loki
 
-    loki:
-      auth_enabled: false
-      server:
-        http_listen_port: 3100
-        grpc_listen_port: 9095
-
-      common:
-        instance_addr: 0.0.0.0
-        ring:
-          kvstore:
-            store: inmemory
-
-      limits_config:
-        allow_structured_metadata: false
-      ruler:
-        alertmanager_url: http://prometheus-alertmanager.demo.svc.cluster.local:9093
-
-      analytics:
-        reporting_enabled: false
-      storage:
-        bucketNames:
-          chunks: loki-chunks
-          ruler: loki-ruler
-          admin: loki-admin
-
-      schemaConfig:
-        configs:
-          - from: "2024-04-01"
-            store: boltdb-shipper
-            object_store: filesystem
-            schema: v11
-            index:
-              prefix: loki_index_
-              period: 24h
-
-      storageConfig:
-        boltdb_shipper:
-          active_index_directory: /var/loki/index
-          cache_location: /var/loki/cache
-          shared_store: filesystem
-        filesystem:
-          directory: /var/loki/chunks
-
-      ingester:
-        chunk_encoding: snappy
-
-      tracing:
-        enabled: false  # Can enable if using OpenTelemetry
-
-      querier:
-        max_concurrent: 4
-
-    # Optional: reduce other components to 0 for clarity
     backend:
       replicas: 0
     read:
       replicas: 0
     write:
+      replicas: 0
+    ingester:
+      replicas: 0
+    querier:
+      replicas: 0
+    queryFrontend:
+      replicas: 0
+    queryScheduler:
+      replicas: 0
+    distributor:
+      replicas: 0
+    compactor:
+      replicas: 0
+    indexGateway:
+      replicas: 0
+    bloomCompactor:
+      replicas: 0
+    bloomGateway:
       replicas: 0
