--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -15,73 +15,29 @@ spec:
         namespace: demo
   values:
     fullnameOverride: loki
-
+    mode: "singleBinary"  # ← REQUIRED
     loki:
       auth_enabled: false
-
       commonConfig:
         replication_factor: 1
-
+      storage:
+        type: filesystem
       schemaConfig:
         configs:
-          - from: "2024-04-01"
-            store: tsdb
+          - from: "2022-01-01"
+            store: boltdb-shipper
             object_store: filesystem
-            schema: v13
+            schema: v11
             index:
-              prefix: loki_index_
+              prefix: index_
               period: 24h
-
-      storage_config:
-        filesystem:
-          directory: /var/loki
-
-      pattern_ingester:
-        enabled: true
-
-      limits_config:
-        allow_structured_metadata: true
-        volume_enabled: true
-
-      ruler:
-        enable_api: true
-
-    minio:
-      enabled: false
-
-    deploymentMode: SingleBinary
-
     singleBinary:
       replicas: 1
       persistence:
         enabled: true
-        storageClass: standard
-        accessModes:
-          - ReadWriteOnce
         size: 10Gi
-        mountPath: /var/loki
-
-    backend:
-      replicas: 0
-    read:
-      replicas: 0
-    write:
-      replicas: 0
-    ingester:
-      replicas: 0
-    querier:
-      replicas: 0
-    queryFrontend:
-      replicas: 0
-    queryScheduler:
-      replicas: 0
-    distributor:
-      replicas: 0
-    compactor:
-      replicas: 0
-    indexGateway:
-      replicas: 0
-    bloomCompactor:
-      replicas: 0
-    bloomGateway:
-      replicas: 0
+        storageClassName: standard
+    gateway:
+      enabled: true
+    serviceMonitor:
+      enabled: true
