--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -14,14 +14,7 @@ spec:
         name: grafana
         namespace: demo
   values:
-    fullnameOverride: loki
-    mode: "singleBinary"
     loki:
-      memberlist:
-        join_members: []
-      results_cache:
-        enabled: false
-      auth_enabled: false
       commonConfig:
         replication_factor: 1
       storage:
@@ -29,31 +22,52 @@ spec:
       schemaConfig:
         configs:
           - from: "2022-01-01"
-            store: boltdb-shipper
+            schema: v13
+            store: tsdb
             object_store: filesystem
-            schema: v11
             index:
               prefix: index_
               period: 24h
+      pattern_ingester:
+          enabled: true
+      limits_config:
+        allow_structured_metadata: true
+        volume_enabled: true
+      ruler:
+        enable_api: true
+
+    minio:
+      enabled: false
+          
+    deploymentMode: SingleBinary
+
     singleBinary:
       replicas: 1
-      persistence:
-        enabled: true
-        size: 10Gi
-        storageClassName: standard
-    gateway:
-      enabled: true
-    serviceMonitor:
-      enabled: true
+
+    # Zero out replica counts of other deployment modes
+    backend:
+      replicas: 0
+    read:
+      replicas: 0
+    write:
+      replicas: 0
+
+    ingester:
+      replicas: 0
     querier:
       replicas: 0
     queryFrontend:
       replicas: 0
+    queryScheduler:
+      replicas: 0
     distributor:
       replicas: 0
-    ingester:
-      replicas: 0
-    ruler:
-      enabled: false
     compactor:
-      enabled: false
+      replicas: 0
+    indexGateway:
+      replicas: 0
+    bloomCompactor:
+      replicas: 0
+    bloomGateway:
+      replicas: 0
+    fullnameOverride: loki
