added gfafana sources/loki20

--- a/clusters/demo/otel/loki-hr.yml
+++ b/clusters/demo/otel/loki-hr.yml
@@ -15,6 +15,7 @@ spec:
         namespace: demo
   values:
     loki:
+      auth_enabled: false
       commonConfig:
         replication_factor: 1
       storage:
