--- a/clusters/demo/otel/otel-collector-hr.yml
+++ b/clusters/demo/otel/otel-collector-hr.yml
@@ -32,6 +32,7 @@ spec:
           verbosity: normal
         loki:
           endpoint: http://loki:3100/loki/api/v1/push
+          format: json
         prometheus:
           endpoint: "0.0.0.0:8889"
 
