--- a/clusters/demo/otel/otel-collector-hr.yml
+++ b/clusters/demo/otel/otel-collector-hr.yml
@@ -24,8 +24,7 @@ spec:
         otlp:
           protocols:
             grpc: {}
-            http:
-              endpoint: "0.0.0.0:3030"
+            http: {}
 
       exporters:
         debug:
