--- a/clusters/demo/otel/otel-collector-hr.yml
+++ b/clusters/demo/otel/otel-collector-hr.yml
@@ -16,6 +16,9 @@ spec:
   values:
     mode: deployment
     fullnameOverride: collector
+    ports:
+      metrics:
+        enabled: true
     image:
       repository: otel/opentelemetry-collector-contrib
       tag: 0.128.0
@@ -34,7 +37,7 @@ spec:
           tls:
             insecure: true
         prometheus:
-          endpoint: "0.0.0.0:8889"
+          endpoint: "0.0.0.0:8888"
 
       service:
         pipelines:
