--- a/clusters/demo/otel/otel-collector-hr.yml
+++ b/clusters/demo/otel/otel-collector-hr.yml
@@ -37,6 +37,7 @@ spec:
           tls:
             insecure: true
         prometheus:
+          endpoint: "0.0.0.0:8889"
 
       service:
         pipelines:
