--- a/clusters/demo/otel/otel-collector-hr.yml
+++ b/clusters/demo/otel/otel-collector-hr.yml
@@ -38,15 +38,18 @@ spec:
             insecure: true
         prometheus:
           endpoint: "0.0.0.0:8889"
-
+        jaeger:
+          endpoint: "jaeger:14250"
+          tls:
+            insecure: true
       service:
         pipelines:
           logs:
             receivers: [otlp]
-            exporters: [otlphttp/logs]
+            exporters: [debug, otlphttp/logs]
           traces:
             receivers: [otlp]
-            exporters: [debug]
+            exporters: [debug, jaeger]
           metrics:
             receivers: [otlp]
             exporters: [debug, prometheus]
